# ResumAi

./: .gitignore  READMD.md  README.md  ingest.py  job_description_test.py  main.py  pyproject.toml  query.py  requirements.txt  test_annotation.py
data/job_description/: job_description.txt  job_descriptions_100.json
data/json_examples/: sample_output.json  sample_schema.json
tools/: analyze_job_lengths.py
vectorstore/: docs.npy  index.faiss  index.pkl
vectorstore_jobs/: index.pkl
